log
Fri 29 Sep 2023 07:28:28 PM UTC: 
 tests:  0|4
total_score: 0/70
a411e09
Fri 29 Sep 2023 08:31:35 PM UTC: 
 heap.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
3d9f859
Fri 29 Sep 2023 08:32:10 PM UTC: 
 heap.c | 6 ------
 1 file changed, 6 deletions(-)
 tests:  1|3
total_score: 10/70
69bf74f
Fri 29 Sep 2023 08:34:28 PM UTC: 
 heap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
d76b138
Fri 29 Sep 2023 08:35:09 PM UTC: 
 heap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  2|2
total_score: 20/70
a063372
Fri 29 Sep 2023 08:43:18 PM UTC: 
 heap.c | 33 ++++++++++++++++++++++++++++++++-
 1 file changed, 32 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:42:42: error: ‘p’ undeclared (first use in this function); did you mean ‘pq’?
   42 |   pq->heapArray[currentIndex].priority = p;
      |                                          ^
      |                                          pq
heap.c:42:42: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
15edf49
Fri 29 Sep 2023 08:43:36 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:42:40: error: assignment to ‘int’ from ‘Heap *’ {aka ‘struct Heap *’} makes integer from pointer without a cast [-Werror=int-conversion]
   42 |   pq->heapArray[currentIndex].priority = pq;
      |                                        ^
cc1: all warnings being treated as errors
Compilation failed
d27c459
Fri 29 Sep 2023 08:44:32 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:42:42: error: ‘p’ undeclared (first use in this function); did you mean ‘pq’?
   42 |   pq->heapArray[currentIndex].priority = p;
      |                                          ^
      |                                          pq
heap.c:42:42: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
b70dcff
Fri 29 Sep 2023 08:45:41 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
4f6bf72
Fri 29 Sep 2023 08:48:33 PM UTC: 
 heap.c | 30 ------------------------------
 1 file changed, 30 deletions(-)
test.c: In function ‘heap_push’:
test.c:276:5: error: ‘main’ is normally a non-static function [-Werror=main]
  276 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:292:1: error: expected declaration or statement at end of input
  292 | }
      | ^
test.c:12:6: error: unused variable ‘msg’ [-Werror=unused-variable]
   12 | char msg[300];
      |      ^~~
At top level:
test.c:276:5: error: ‘main’ defined but not used [-Werror=unused-function]
  276 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:6:8: error: ‘_strdup’ defined but not used [-Werror=unused-function]
    6 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
85cafe5
Fri 29 Sep 2023 08:48:43 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
4aeb2c8
Fri 29 Sep 2023 09:35:44 PM UTC: 
 heap.c | 29 +++++++++++++++++++++++++++++
 1 file changed, 29 insertions(+)
 tests:  7|1
total_score: 45/70
00c992d
Fri 29 Sep 2023 09:57:45 PM UTC: 
 heap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  7|1
total_score: 45/70
fbd8368
